--- a/code/notebooks/benchmark-local-distribution.ipynb
+++ b/code/notebooks/benchmark-local-distribution.ipynb
@@ -30,7 +30,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "__file__ =  '/home/yakim/PROJECT02/code/notebooks/benchmark-local-distribution.ipynb'"
+    "import os\n",
+    "\n",
+    "__file__ =  os.getcwd()\n",
+    "__file__ = __file__ + '\\\\' if '\\\\' in __file__ else '/'\n",
+    "__file__ += 'benchmark-local-distribution.ipynb'"
    ]
   },
   {
@@ -501,7 +505,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.17"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
