--- a/code/notebooks/koalas-benchmark-local-execution.ipynb
+++ b/code/notebooks/koalas-benchmark-local-execution.ipynb
@@ -30,10 +30,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import dask\n",
-    "import distributed\n",
-    "print(\"Dask version: \", dask.__version__)\n",
-    "print(\"Distributed version: \", distributed.__version__)"
+    "# For some reason, if I don't start the client at the top, it doesn't initialize correctly.\n",
+    "from dask.distributed import Client, LocalCluster\n",
+    "\n",
+    "cluster = LocalCluster(processes=True, n_workers=6, threads_per_worker=1)\n",
+    "client = Client(cluster)\n",
+    "client"
    ]
   },
   {
@@ -45,9 +47,12 @@
     "import os\n",
     "from datetime import datetime\n",
     "\n",
+    "# Setting this environment so Koalas doesn't give us a warning\n",
+    "os.environ['PYARROW_IGNORE_TIMEZONE'] = '1'\n",
+    "\n",
     "__file__ =  os.getcwd()\n",
-    "__file__ = __file__ + '\\\\' if '\\\\' in __file__ else '/'\n",
-    "__file__ += 'benchmark-local-distribution.ipynb'\n",
+    "__file__ = __file__ + '\\\\' if '\\\\' in __file__ else __file__ + '/'\n",
+    "__file__ += 'koala-benchmark-local-execution.ipynb'\n",
     "\n",
     "\n",
     "INPUT_FILE = __file__.replace('\\\\', '/')\n",
@@ -63,16 +68,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import dask\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import databricks.koalas as ks\n",
     "import dask.dataframe as dd\n",
-    "from dask.distributed import Client\n",
-    " \n",
+    "\n",
     "print('pandas version: %s' % pd.__version__)\n",
     "print('numpy version: %s' % np.__version__)\n",
     "print('koalas version: %s' % ks.__version__)\n",
-    "import dask\n",
     "print('dask version: %s' % dask.__version__)\n",
     " \n",
     "import time\n",
@@ -123,15 +127,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = Client()\n",
-    "\n",
-    "dask_data = dd.read_parquet(INPUT_FILE, index='index')\n",
+    "# Client(n_workers=6, processes=True, threads_per_worker=1)\n",
+    "dask_data = dd.read_parquet(INPUT_FILE, chunksize=10000)\n",
     "dask_data.columns = dask_data.columns.str.lower()\n",
     "\n",
     "dask_benchmarks = {\n",
     "    'duration': [],  # in seconds\n",
     "    'task': [],\n",
-    "}"
+    "}\n",
+    "client"
    ]
   },
   {
@@ -544,7 +548,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.17"
   }
  },
  "nbformat": 4,
