--- a/code/notebooks/koalas-benchmark-local-execution.ipynb
+++ b/code/notebooks/koalas-benchmark-local-execution.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,9 +64,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:Found pyspark version \"3.4.3\" installed. The pyspark version 3.2 and above has a built-in \"pandas APIs on Spark\" module ported from Koalas. Try `import pyspark.pandas as ps` instead. \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pandas version: 1.3.5\n",
+      "numpy version: 1.21.6\n",
+      "koalas version: 1.8.2\n",
+      "dask version: 2022.02.0\n"
+     ]
+    }
+   ],
    "source": [
     "import dask\n",
     "import pandas as pd\n",
@@ -128,7 +146,7 @@
    "outputs": [],
    "source": [
     "# Client(n_workers=6, processes=True, threads_per_worker=1)\n",
-    "dask_data = dd.read_parquet(INPUT_FILE, chunksize=10000)\n",
+    "dask_data = dd.read_parquet(INPUT_FILE, storage_options={\"anon\": True},)\n",
     "dask_data.columns = dask_data.columns.str.lower()\n",
     "\n",
     "dask_benchmarks = {\n",
@@ -143,20 +161,6 @@
    "metadata": {},
    "source": [
     "### Standard operations"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dask_data.groupby(by=['passenger_count']).agg(\n",
-    "      {\n",
-    "        'fare_amt': ['mean', 'std'], \n",
-    "        'tip_amt': ['mean', 'std']\n",
-    "      }\n",
-    ").compute()"
    ]
   },
   {
@@ -216,7 +220,7 @@
     "    return ret.compute()\n",
     "  \n",
     "def groupby_statistics(df):\n",
-    "    return df.groupby(by='passenger_count').agg(\n",
+    "    return df.drop(columns=df.columns.difference(['passenger_count', 'fare_amt', 'tip_amt'])).groupby(by='passenger_count').agg(\n",
     "      {\n",
     "        'fare_amt': ['mean', 'std'], \n",
     "        'tip_amt': ['mean', 'std']\n",
@@ -548,7 +552,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.17"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
