Finally some progress...

--- a/code/notebooks/koalas-benchmark-local-execution.ipynb
+++ b/code/notebooks/koalas-benchmark-local-execution.ipynb
@@ -33,14 +33,14 @@
     "# For some reason, if I don't start the client at the top, it doesn't initialize correctly.\n",
     "from dask.distributed import Client, LocalCluster\n",
     "\n",
-    "cluster = LocalCluster(processes=True, n_workers=6, threads_per_worker=1)\n",
+    "cluster = LocalCluster(n_workers=1, memory_limit='12GB')\n",
     "client = Client(cluster)\n",
     "client"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
     "\n",
     "\n",
     "INPUT_FILE = __file__.replace('\\\\', '/')\n",
-    "INPUT_FILE = f\"{'/'.join(INPUT_FILE.split('/')[:-3])}/datasets/yellow_taxi_tripdata_2009-01.parquet\"\n",
+    "INPUT_FILE = f\"{'/'.join(INPUT_FILE.split('/')[:-3])}/datasets/ks_yellow_taxi_tripdata_2009-01.parquet\"\n",
     "\n",
     "OUTPUT_FILE = __file__.replace('\\\\', '/')\n",
     "OUTPUT_FILE = f\"{'/'.join(OUTPUT_FILE.split('/')[:-3])}/output/koalas-benchmark-no-parquet-cache/single_node_{datetime.now().strftime('%H%M%S')}\""
@@ -64,27 +64,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:root:Found pyspark version \"3.4.3\" installed. The pyspark version 3.2 and above has a built-in \"pandas APIs on Spark\" module ported from Koalas. Try `import pyspark.pandas as ps` instead. \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pandas version: 1.3.5\n",
-      "numpy version: 1.21.6\n",
-      "koalas version: 1.8.2\n",
-      "dask version: 2022.02.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import dask\n",
     "import pandas as pd\n",
@@ -146,14 +128,13 @@
    "outputs": [],
    "source": [
     "# Client(n_workers=6, processes=True, threads_per_worker=1)\n",
-    "dask_data = dd.read_parquet(INPUT_FILE, storage_options={\"anon\": True},)\n",
-    "dask_data.columns = dask_data.columns.str.lower()\n",
+    "dask_data = dd.read_parquet(INPUT_FILE, storage_options={\"anon\": True})\n",
     "\n",
     "dask_benchmarks = {\n",
     "    'duration': [],  # in seconds\n",
     "    'task': [],\n",
     "}\n",
-    "client"
+    "# client"
    ]
   },
   {
@@ -220,7 +201,7 @@
     "    return ret.compute()\n",
     "  \n",
     "def groupby_statistics(df):\n",
-    "    return df.drop(columns=df.columns.difference(['passenger_count', 'fare_amt', 'tip_amt'])).groupby(by='passenger_count').agg(\n",
+    "    return df[['passenger_count', 'fare_amt', 'tip_amt']].groupby(by='passenger_count').agg(\n",
     "      {\n",
     "        'fare_amt': ['mean', 'std'], \n",
     "        'tip_amt': ['mean', 'std']\n",
@@ -336,7 +317,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "koalas_data = ks.read_parquet(INPUT_FILE, index_col='index')\n",
+    "koalas_data = ks.read_parquet(INPUT_FILE)\n",
     " \n",
     "koalas_benchmarks = {\n",
     "    'duration': [],  # in seconds\n",
@@ -358,7 +339,7 @@
    "outputs": [],
    "source": [
     "def read_file_parquet(df=None):\n",
-    "    return ks.read_parquet(INPUT_FILE, index_col='index')\n",
+    "    return ks.read_parquet(INPUT_FILE)\n",
     "  \n",
     "def count(df=None):\n",
     "    return len(df)\n",
@@ -438,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
