Removed some of the functions to test (making a column .to_pandas doesn't make sense) + Edit requirements + executed "koalas-benchmark" twice.

--- a/code/nyc_taxi_dataset_study/koalas-benchmark-local-execution-summary.ipynb
+++ b/code/nyc_taxi_dataset_study/koalas-benchmark-local-execution-summary.ipynb
@@ -30,8 +30,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "DATASETS_DIR = '../../datasets'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import pandas as pd\n",
     "from scipy import stats\n",
+    "import os\n",
     " \n",
     "def fair_avg(durations):\n",
     "  \"\"\"Get an average duration among multiple durations fairly by removing the first run and the best run first.\"\"\"\n",
@@ -54,10 +64,10 @@
     "def avg_result_df(file_name_prefix):\n",
     "  \"\"\"Get result files with the given prefix and then construct the average result dataframe.\"\"\"\n",
     "  dfs = []\n",
-    "  file_infos = dbutils.fs.ls('/FileStore/koalas-benchmark-no-parquet-cache')\n",
+    "  file_infos = os.listdir(f'{DATASETS_DIR}/../results/koalas-benchmark-no-parquet-cache')\n",
     "  for file_info in file_infos:\n",
-    "    if file_info.name.startswith(file_name_prefix):\n",
-    "      dfs.append(pd.read_parquet('/dbfs/FileStore/koalas-benchmark-no-parquet-cache/%s' % file_info.name))\n",
+    "    if file_info.startswith(file_name_prefix):\n",
+    "      dfs.append(pd.read_parquet(f'{DATASETS_DIR}/../results/koalas-benchmark-no-parquet-cache/%s' % file_info))\n",
     "  print(f'{file_name_prefix} has {len(dfs)} runs')    \n",
     "  \n",
     "  avg_df = dfs[0].copy()\n",
@@ -85,11 +95,7 @@
     "local_res_df = avg_result_df('single_node_')\n",
     "local_res_df.columns = ['Koalas (PySpark)', 'Dask']\n",
     "standard_ops = local_res_df.iloc[:15]\n",
-    "ops_with_filtering = local_res_df.iloc[15:]\n",
-    " \n",
-    "local_res_with_caching_df = avg_result_df('cache_single_node_')\n",
-    "local_res_with_caching_df.columns = ['Koalas (PySpark)', 'Dask']\n",
-    "ops_with_filtering_caching = local_res_with_caching_df.iloc[15:]"
+    "ops_with_filtering = local_res_df.iloc[15:]"
    ]
   },
   {
@@ -230,74 +236,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Operations with filtering and caching\n",
-    "Added caching for the filtered data."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_title = 'Operations with filtering and caching (local execution)'\n",
-    " \n",
-    "ax = ops_with_filtering_caching.sort_index().plot.bar(title=plot_title)\n",
-    "ax.set_ylabel(\"Elapsed time (sec)\")\n",
-    " \n",
-    "tmp_df_x_times_faster = ops_with_filtering_caching.sort_index().copy()\n",
-    "tmp_df_x_times_faster['Dask / Koalas'] = tmp_df_x_times_faster.Dask / tmp_df_x_times_faster['Koalas (PySpark)']\n",
-    "tmp_df_x_times_faster['Koalas / Dask'] = tmp_df_x_times_faster['Koalas (PySpark)'] / tmp_df_x_times_faster.Dask\n",
-    "annotate_x_times_faster(ax, x_times_list=tmp_df_x_times_faster['Dask / Koalas'].to_list())\n",
-    " \n",
-    "ops_with_filtering_caching.sort_index().plot.bar(logy=True, title='%s - log scaling' % plot_title).set_ylabel(\"Elapsed time (sec)\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tmp_df_x_times_faster"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "annotate(pd.Series(stats.gmean(ops_with_filtering_caching), index=['Koalas (PySpark)', 'Dask']).plot.bar(title='Geometric mean'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "annotate(ops_with_filtering_caching.sum().plot.bar(title='Total execution time'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"Performance diff %% (simple avg): %s\" % (sum(ops_with_filtering_caching.Dask / ops_with_filtering_caching['Koalas (PySpark)']) / len(ops_with_filtering_caching)))\n",
-    "print(\"Performance diff %% (geomean): %s\" % stats.gmean(ops_with_filtering_caching.Dask / ops_with_filtering_caching['Koalas (PySpark)']))\n",
-    " \n",
-    "count_ops = ops_with_filtering_caching.filter(items=['count', 'count index', 'join count'], axis=0)\n",
-    "print(\"Performance diff %% (count, simple avg): %s\" % (sum(count_ops.Dask / count_ops['Koalas (PySpark)']) / len(count_ops)))\n",
-    "print(\"Performance diff %% (count, geomean): %s\" % stats.gmean(count_ops.Dask / count_ops['Koalas (PySpark)']))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Overall"
    ]
   },
@@ -307,7 +245,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "overall_df = pd.concat([standard_ops, ops_with_filtering, ops_with_filtering_caching])\n",
+    "overall_df = pd.concat([standard_ops, ops_with_filtering])\n",
     "print(\"Total performance diff %% (simple avg): %s\" % (sum(overall_df.Dask / overall_df['Koalas (PySpark)']) / len(overall_df)))\n",
     "print(\"Total performance diff %% (geomean): %s\" % stats.gmean(overall_df.Dask / overall_df['Koalas (PySpark)']))"
    ]
