Ran a few more runs and executed local-exec-summary

--- a/code/nyc_taxi_dataset_study/koalas-benchmark-local-execution.ipynb
+++ b/code/nyc_taxi_dataset_study/koalas-benchmark-local-execution.ipynb
@@ -34,7 +34,7 @@
      "output_type": "stream",
      "text": [
       "spark.databricks.io.cache.enabled is false\n",
-      "Access spark session: http://localhost:4040 <pyspark.sql.session.SparkSession object at 0x000001DEB3A3F4C8>\n"
+      "Access spark session: http://localhost:4040 <pyspark.sql.session.SparkSession object at 0x000001908C9FCD88>\n"
      ]
     }
    ],
@@ -167,7 +167,7 @@
        "<td style=\"vertical-align: top; border: 0px solid white\">\n",
        "<h3 style=\"text-align: left;\">Client</h3>\n",
        "<ul style=\"text-align: left; list-style: none; margin: 0; padding: 0;\">\n",
-       "  <li><b>Scheduler: </b>tcp://127.0.0.1:55849</li>\n",
+       "  <li><b>Scheduler: </b>tcp://127.0.0.1:61288</li>\n",
        "  <li><b>Dashboard: </b><a href='http://127.0.0.1:8787/status' target='_blank'>http://127.0.0.1:8787/status</a></li>\n",
        "</ul>\n",
        "</td>\n",
@@ -183,7 +183,7 @@
        "</table>"
       ],
       "text/plain": [
-       "<Client: 'tcp://127.0.0.1:55849' processes=1 threads=4, memory=21.47 GB>"
+       "<Client: 'tcp://127.0.0.1:61288' processes=1 threads=4, memory=21.47 GB>"
       ]
      },
      "execution_count": 4,
@@ -307,24 +307,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "read file took: 0.008478641510009766 seconds\n",
-      "count took: 3.315784454345703 seconds\n",
-      "count index length took: 20.070648908615112 seconds\n",
-      "mean took: 4.278668165206909 seconds\n",
-      "standard deviation took: 5.791538715362549 seconds\n",
-      "mean of columns addition took: 5.865076065063477 seconds\n",
-      "mean of columns multiplication took: 6.07432746887207 seconds\n",
-      "value counts took: 4.330781698226929 seconds\n",
-      "mean of complex arithmetic ops took: 18.821117401123047 seconds\n",
-      "groupby statistics took: 23.241408586502075 seconds\n",
-      "join count took: 24.683266162872314 seconds\n",
-      "join took: 25.168797254562378 seconds\n"
+      "read file took: 0.012467145919799805 seconds\n",
+      "count took: 3.402935266494751 seconds\n",
+      "count index length took: 21.7066810131073 seconds\n",
+      "mean took: 4.680126428604126 seconds\n",
+      "standard deviation took: 6.021027326583862 seconds\n",
+      "mean of columns addition took: 6.579668283462524 seconds\n",
+      "mean of columns multiplication took: 6.468385934829712 seconds\n",
+      "value counts took: 4.679720878601074 seconds\n",
+      "mean of complex arithmetic ops took: 20.302884340286255 seconds\n",
+      "groupby statistics took: 25.221879243850708 seconds\n",
+      "join count took: 29.049068927764893 seconds\n",
+      "join took: 25.331951141357422 seconds\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "25.168797254562378"
+       "25.331951141357422"
       ]
      },
      "execution_count": 6,
@@ -380,23 +380,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "filtered count took: 25.63859510421753 seconds\n",
-      "filtered count index length took: 23.754274368286133 seconds\n",
-      "filtered mean took: 25.060559034347534 seconds\n",
-      "filtered standard deviation took: 25.70417308807373 seconds\n",
-      "filtered mean of columns addition took: 25.71012544631958 seconds\n",
-      "filtered mean of columns multiplication took: 25.85763430595398 seconds\n",
-      "filtered mean of complex arithmetic ops took: 30.063212156295776 seconds\n",
-      "filtered value counts took: 25.975233793258667 seconds\n",
-      "filtered groupby statistics took: 27.603911638259888 seconds\n",
-      "filtered join count took: 27.22901725769043 seconds\n",
-      "filtered join took: 28.791603803634644 seconds\n"
+      "filtered count took: 25.656850814819336 seconds\n",
+      "filtered count index length took: 24.860188961029053 seconds\n",
+      "filtered mean took: 26.241296768188477 seconds\n",
+      "filtered standard deviation took: 26.413559198379517 seconds\n",
+      "filtered mean of columns addition took: 25.802118062973022 seconds\n",
+      "filtered mean of columns multiplication took: 25.537301540374756 seconds\n",
+      "filtered mean of complex arithmetic ops took: 29.425952196121216 seconds\n",
+      "filtered value counts took: 25.944531202316284 seconds\n",
+      "filtered groupby statistics took: 27.237637758255005 seconds\n",
+      "filtered join count took: 27.612762451171875 seconds\n",
+      "filtered join took: 27.089094638824463 seconds\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "28.791603803634644"
+       "27.089094638824463"
       ]
      },
      "execution_count": 8,
@@ -445,7 +445,7 @@
        "<td style=\"vertical-align: top; border: 0px solid white\">\n",
        "<h3 style=\"text-align: left;\">Client</h3>\n",
        "<ul style=\"text-align: left; list-style: none; margin: 0; padding: 0;\">\n",
-       "  <li><b>Scheduler: </b>tcp://127.0.0.1:55849</li>\n",
+       "  <li><b>Scheduler: </b>tcp://127.0.0.1:61288</li>\n",
        "  <li><b>Dashboard: </b><a href='http://127.0.0.1:8787/status' target='_blank'>http://127.0.0.1:8787/status</a></li>\n",
        "</ul>\n",
        "</td>\n",
@@ -461,7 +461,7 @@
        "</table>"
       ],
       "text/plain": [
-       "<Client: 'tcp://127.0.0.1:55849' processes=1 threads=4, memory=21.47 GB>"
+       "<Client: 'tcp://127.0.0.1:61288' processes=1 threads=4, memory=21.47 GB>"
       ]
      },
      "execution_count": 9,
@@ -617,46 +617,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "read file took: 0.19410490989685059 seconds\n",
-      "count took: 0.4697713851928711 seconds\n",
-      "count index length took: 0.3832712173461914 seconds\n",
-      "mean took: 0.8740348815917969 seconds\n",
-      "standard deviation took: 1.2641985416412354 seconds\n",
-      "mean of columns addition took: 1.6209068298339844 seconds\n",
-      "mean of columns multiplication took: 1.4408636093139648 seconds\n",
-      "value counts took: 11.071199655532837 seconds\n",
-      "mean of complex arithmetic ops took: 21.132065057754517 seconds\n",
-      "groupby statistics took: 8.751947164535522 seconds\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "tornado.application - ERROR - Uncaught exception GET /status/ws (127.0.0.1)\n",
-      "HTTPServerRequest(protocol='http', host='127.0.0.1:8787', method='GET', uri='/status/ws', version='HTTP/1.1', remote_ip='127.0.0.1')\n",
-      "Traceback (most recent call last):\n",
-      "  File \"c:\\Users\\yakim\\AppData\\Local\\Programs\\Python\\Python37\\lib\\site-packages\\tornado\\websocket.py\", line 942, in _accept_connection\n",
-      "    open_result = handler.open(*handler.open_args, **handler.open_kwargs)\n",
-      "  File \"c:\\Users\\yakim\\AppData\\Local\\Programs\\Python\\Python37\\lib\\site-packages\\tornado\\web.py\", line 3208, in wrapper\n",
-      "    return method(self, *args, **kwargs)\n",
-      "  File \"c:\\Users\\yakim\\AppData\\Local\\Programs\\Python\\Python37\\lib\\site-packages\\bokeh\\server\\views\\ws.py\", line 149, in open\n",
-      "    raise ProtocolError(\"Token is expired.\")\n",
-      "bokeh.protocol.exceptions.ProtocolError: Token is expired.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "join count took: 195.28569889068604 seconds\n",
-      "join took: 379.67569041252136 seconds\n"
+      "read file took: 0.20592594146728516 seconds\n",
+      "count took: 0.4872777462005615 seconds\n",
+      "count index length took: 0.3835182189941406 seconds\n",
+      "mean took: 0.7849950790405273 seconds\n",
+      "standard deviation took: 1.1820640563964844 seconds\n",
+      "mean of columns addition took: 1.2565875053405762 seconds\n",
+      "mean of columns multiplication took: 1.2703442573547363 seconds\n",
+      "value counts took: 10.476154088973999 seconds\n",
+      "mean of complex arithmetic ops took: 21.048777103424072 seconds\n",
+      "groupby statistics took: 5.161369323730469 seconds\n",
+      "join count took: 197.5554277896881 seconds\n",
+      "join took: 374.29529333114624 seconds\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "379.67569041252136"
+       "374.29529333114624"
       ]
      },
      "execution_count": 12,
@@ -712,23 +690,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "filtered count took: 1.408207893371582 seconds\n",
-      "filtered count index length took: 1.0407137870788574 seconds\n",
-      "filtered mean took: 1.66477632522583 seconds\n",
-      "filtered standard deviation took: 1.732065200805664 seconds\n",
-      "filtered mean of columns addition took: 1.5606448650360107 seconds\n",
-      "filtered mean of columns multiplication took: 1.5511305332183838 seconds\n",
-      "filtered mean of complex arithmetic ops took: 10.73877215385437 seconds\n",
-      "filtered value counts took: 8.656679391860962 seconds\n",
-      "filtered groupby statistics took: 3.598891258239746 seconds\n",
-      "filtered join count took: 217.9602336883545 seconds\n",
-      "filtered join took: 409.78059339523315 seconds\n"
+      "filtered count took: 1.3020622730255127 seconds\n",
+      "filtered count index length took: 0.9751574993133545 seconds\n",
+      "filtered mean took: 1.5368273258209229 seconds\n",
+      "filtered standard deviation took: 1.6064865589141846 seconds\n",
+      "filtered mean of columns addition took: 1.440826177597046 seconds\n",
+      "filtered mean of columns multiplication took: 1.4657783508300781 seconds\n",
+      "filtered mean of complex arithmetic ops took: 10.1757173538208 seconds\n",
+      "filtered value counts took: 8.297699451446533 seconds\n",
+      "filtered groupby statistics took: 3.2496275901794434 seconds\n",
+      "filtered join count took: 183.7692358493805 seconds\n",
+      "filtered join took: 401.5474445819855 seconds\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "409.78059339523315"
+       "401.5474445819855"
       ]
      },
      "execution_count": 14,
@@ -783,7 +761,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../../datasets/../results/koalas-benchmark-no-parquet-cache/single_node_145152\n"
+      "../../datasets/../results/koalas-benchmark-no-parquet-cache/single_node_162240\n"
      ]
     }
    ],
